[metadata]
name = ai-daily-brief-agent
version = 0.1.0
description = Daily AI intelligence collection and push agent

[options]
packages = find:
python_requires = >=3.9
install_requires =
    APScheduler>=3.10.4
    beautifulsoup4>=4.12.3
    httpx>=0.27.0
    fastapi>=0.115.0
    uvicorn>=0.30.6
    openai>=1.51.0
    pydantic>=2.8.2
    PyYAML>=6.0.2
    python-dateutil>=2.9.0.post0
    feedparser>=6.0.11

[options.extras_require]
dev =
    pytest>=8.3.3
